k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yeahtube
  namespace: apps
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: yeahtube
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: yeahtube
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: production
        - name: WORKER_CONCURRENCY
          value: "1"
        - name: WORKER_ENCODER
          value: "svtav1"
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: DATABASE_URL
              name: yeahtube-secret
        - name: REDIS_URL
          valueFrom:
            secretKeyRef:
              key: REDIS_URL
              name: yeahtube-secret
        - name: S3_ENDPOINT
          valueFrom:
            secretKeyRef:
              key: S3_ENDPOINT
              name: yeahtube-secret
        - name: S3_REGION
          valueFrom:
            secretKeyRef:
              key: S3_REGION
              name: yeahtube-secret
        - name: S3_BUCKET
          valueFrom:
            secretKeyRef:
              key: S3_BUCKET
              name: yeahtube-secret
        - name: S3_ACCESS_KEY
          valueFrom:
            secretKeyRef:
              key: S3_ACCESS_KEY
              name: yeahtube-secret
        - name: S3_SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: S3_SECRET_KEY
              name: yeahtube-secret
        - name: S3_FORCE_PATH_STYLE
          valueFrom:
            secretKeyRef:
              key: S3_FORCE_PATH_STYLE
              name: yeahtube-secret
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: JWT_SECRET
              name: yeahtube-secret
        - name: STORAGE_TYPE
          valueFrom:
            secretKeyRef:
              key: STORAGE_TYPE
              name: yeahtube-secret
        image: ghcr.io/jati251/yeahtube-image:latest
        imagePullPolicy: Always
        name: yeahtube
        ports:
        - containerPort: 5207
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: "3Gi"
          requests:
            cpu: 100m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: yeahtube-svc
  namespace: apps
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5207
    protocol: TCP
    targetPort: 5207
  selector:
    app: yeahtube
  sessionAffinity: None
  type: ClusterIP
